charts/step-ca/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: step-certificates
spec:
  parentRefs:
    - name: http-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - ca.g4v.dev
  rules:
    - backendRefs:
        - name: step-certificates
          port: 443
          kind: Service
      matches:
        - path:
            type: PathPrefix
            value: /
